@@ -1003,6 +1003,7 @@ Derek Viljoen <derek@viljoen.com>
 Hamed Azizadah <Azizadah@ix.netcom.com>
 Keo Kelly <kkelly@fallschurch.esys.com>
 Joachim Achtzehnter <joachima@realtimeint.com>
+Tomer Amiaz <Tomer@bandwiz.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson.  Paul devised the recursive Makefile scheme that
